fix: minor fixes in controller under maintainability tag